PureFun/PureFunOof/PureFun-fe/src/test/resources/parser/Invalid/Data_Structures_no_type.pf
module DataStructures{

    Person test(23, "test")

    data Person{
        age
        String name
    }

    mainFun(){
        print(test.age)

        (age:Int, name:String) PersAlt(18, "alternate")
        print(persAlt.name)

        return 0
    }
}